--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,11 @@
 body
 {
-	background-color: #fffaf0;
+	/*
+	background-image: url(/images/background.jpg);
+	background-size: 5%;
+	background-repeat: repeat-x repeat-y;
+	*/
+	background-color: #ADD8E6
 }
 
 #title 
@@ -17,7 +22,7 @@ body
 {
 	font-size: 40px;
 	width: 90%;
-	margin:2% 5%;
+	margin: 2% 4%;
 	text-align: center;
 	font-family: 'Ubuntu', sans-serif;
 	color:#2f4f4f4f;
@@ -27,8 +32,8 @@ body
 {
 	font-size: 20px;
 	border-radius: 25px;
-	width: 5%;
-	margin-left: 50%;
+	width: 25%;
+	margin-left: 35%;
 	font-family: 'Ubuntu', sans-serif;
 }
 
@@ -39,13 +44,42 @@ body
 	opacity: 50%;
 }
 
-#login
+.login
 {
-	font-size:30px;
-	width:10%;
-	margin-left:50%;
-	padding:10px;
-	background-color:#2f4f4f4f;
+	float: left;
+	background-color:#ffffef;
+	overflow: hidden;
+	font-size: 30px;
+	max-height: 59vh;
+	width: 30vw;
+	height: 30vw;
+	left: 0;
+	margin-left: 20vw;
+	margin-top: 10vh;
+	border-top-left-radius: 25px;
+	border-bottom-left-radius: 25px;
+}
+
+.phone-image
+{
+	float: left;
+	max-height: 60%;
+	width: 30vw;
+	height: 30vw;
+	margin-top: 10vh;
+}
+
+.contactical
+{
+	display: block;
+	max-width: 100%;
+	max-height: 100%;
+	width: auto;
+	height: auto;
+	position: relative;
+	left: 0;
+	border-top-right-radius: 25px;
+	border-bottom-right-radius: 25px;
 }
 
 input[type="text"], input[type="password"]
@@ -82,6 +116,6 @@ input[type="text"], input[type="password"]
 	text-align: center;
 	width: 90%;
 	margin-left: 10%;
-	margin-bottom: 2%;
+	/*margin-bottom: 2%;*/
 	color: #2f4f4f;
 }
