--- a/css/styles.css
+++ b/css/styles.css
@@ -1,11 +1,14 @@
 body {
   /*
-	background-image: url(/images/background.jpg);
+
 	background-size: 5%;
 	background-repeat: repeat-x repeat-y;
 	*/
-  background: #add8e6;
-  animation: mymove 10s infinite;
+}
+
+.container.loginContainer {
+  width: 700px;
+  max-height: 400px;
 }
 
 .box {
