Presto! Background Image

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,7 @@
 body {
 
   background-color: cadetblue;
+  background-image: url("/COP4331G1P1/images/office.webp");
 }
 
 .container.loginContainer {
