--- a/css/styles.css
+++ b/css/styles.css
@@ -31,6 +31,16 @@ body {
   background: silver;
 }
 
+.form-control.firstName {
+  border-bottom-right-radius: 0;
+  border-top-right-radius: 0;
+}
+
+.form-control.lastName {
+  border-bottom-left-radius: 0;
+  border-top-left-radius: 0;
+}
+
 .login-new {
   background-color: red;
 }
