--- a/css/styles.css
+++ b/css/styles.css
@@ -34,6 +34,8 @@ body {
 .form-control.firstName {
   border-bottom-right-radius: 0;
   border-top-right-radius: 0;
+  border-right: none;
+  margin-right: 1px;
 }
 
 .form-control.lastName {
