--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,36 @@ body {
   z-index: 0;
 }
 
+.profile-icon {
+  width: 50px;
+  height: 50px;
+  max-height: 50px;
+  min-width: 50px;
+  border-radius: 25px;
+  background-color: aliceblue;
+  margin: 5px;
+}
+
+.contact-card {
+  width: 220px;
+  height: 100px;
+  background-color: white;
+  margin: 5px;
+  border-radius: 25px;
+}
+
+.contact-container {
+  width: 100%;
+  height: 100%;
+  max-width: 250px;
+  display: flex;
+  padding: 20px;
+  flex-wrap: wrap;
+  align-content: flex-start;
+  align-items: flex-start;
+  justify-items: center;
+}
+
 .container.loginContainer {
   max-width: 500px;
   /*min-height: 400px;*/
