--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,12 @@ body {
   background-color: cadetblue;
 }
 
+.beveledBox {
+  background-color: white;
+  border-radius: 25px;
+  padding: 25px;
+}
+
 .loginHeader {
   margin-bottom: 20px; margin-top: 20px;
 }
@@ -21,6 +27,14 @@ body {
   border-radius: 25px;
   padding: 25px;
   z-index: 1;
+}
+
+.container.backgroundContainer {
+  max-width: 1500px;
+  height: 80%;
+  background-color: #000000AA;
+  border-radius: 25px;
+  padding: 25px;
 }
 
 .box {
@@ -78,6 +92,8 @@ label {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+
+  z-index: -1;
 }
 
 .login {
