--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,12 @@ body {
   background-color: cadetblue;
 }
 
+.logout {
+  position: absolute;
+  top: 100px;
+  right: 200px;
+}
+
 .contacts {
   max-height: 60vh;
 }
