--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,29 @@ body {
   background-color: cadetblue;
 }
 
+html, body {
+  width: 100%;
+  height:100%;
+}
+
+body {
+    background: linear-gradient(-45deg, #FF6C32, #4b8bf2, #FF6C32);
+    background-size: 400% 400%;
+    animation: gradient 15s ease infinite;
+}
+
+@keyframes gradient {
+    0% {
+        background-position: 0% 50%;
+    }
+    50% {
+        background-position: 100% 50%;
+    }
+    100% {
+        background-position: 0% 50%;
+    }
+}
+
 .logout {
   position: absolute;
   top: 100px;
@@ -22,8 +45,7 @@ body {
 
 .beveledBox {
   background-color: white;
-  border-radius: 25px;
-  padding: 25px;
+  border-radius: 10px;
 }
 
 .profile-icon {
