Clean up contact listing

--- a/css/styles.css
+++ b/css/styles.css
@@ -34,7 +34,7 @@ body {
 }
 
 .contact-card:hover {
-  background-color: #0000aa22;
+  background-color: #e0e0e0;
 }
 
 .beveledBox {
@@ -43,13 +43,15 @@ body {
 }
 
 .profile-icon {
-  width: 30px;
-  height: 30px;
-  max-height: 30px;
-  min-width: 30px;
-  border-radius: 15px;
-  background-color: lightblue;
+  width: 40px;
+  height: 40px;
+  max-height: 40px;
+  min-width: 40px;
+  border-radius: 20px;
+  background-color: gray;
+  color: white;
   margin: 5px;
+  overflow: hidden;
 }
 
 .loginHeader {
@@ -283,5 +285,9 @@ a:link {
   left: 0;
   border-top-right-radius: 25px;
   border-bottom-right-radius: 25px;
+}
+
+a.contact-link {
+  text-decoration: none;
 }
 /* CREATE ACCOUNT */
