--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,15 @@
+:root {
+  --custom-BR: 25px;
+  --custom-light-gray: #e0e0e0
+}
+
 body {
   background-color: cadetblue;
+}
+
+.modal-content {
+  border-radius: var(--custom-BR) !important;
+  overflow: hidden !important;
 }
 
 html, body {
@@ -15,19 +25,70 @@ body {
 
 @keyframes gradient {
     0% {
-        background-position: 0% 50%;
+        background-position: 0 50%;
     }
     50% {
         background-position: 100% 50%;
     }
     100% {
-        background-position: 0% 50%;
+        background-position: 0 50%;
     }
 }
 
 .contacts {
   overflow: auto;
-  border-bottom: 1px solid #e0e0e0;
+  border-bottom: 1px solid var(--custom-light-gray);
+}
+
+.contact-data {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  overflow: auto;
+}
+
+.contact-info {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  max-width: 500px;
+  overflow: auto
+}
+
+.contact-display {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  min-width: 350px;
+  overflow: auto;
+  flex: 1 1 auto;
+}
+
+.info-pane {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.contact-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.contact-info-header {
+  display: flex;
+  padding: 5px;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+}
+
+.contact-list-display {
+  display: flex;
+  flex-direction: column;
+  margin-right: 20px;
+  min-width: 350px;
 }
 
 .list-group-item {
@@ -41,7 +102,7 @@ body {
 }
 
 .contact-card:hover {
-  background-color: #e0e0e0;
+  background-color: var(--custom-light-gray);
   transition: 0.3s;
 }
 
@@ -51,7 +112,7 @@ body {
 
 .beveledBox {
   background-color: white;
-  border-radius: 25px;
+  border-radius: var(--custom-BR);
 }
 
 .profile-icon {
@@ -77,7 +138,7 @@ body {
 
 .form-control[type=text] {
   height: 40px;
-  background-color: #e0e0e0;
+  background-color: var(--custom-light-gray);
   border: none;
 }
 
@@ -86,7 +147,7 @@ body {
 }
 
 .form-control[type=text]:focus {
-  background-color: #e0e0e0;
+  background-color: var(--custom-light-gray);
 }
 
 h3.profile-ab{
@@ -128,20 +189,32 @@ h3.profile-ab.enlarged{
   z-index: 0;
 }
 
+.landing-body {
+  display: flex;
+  align-items: center;
+  text-align: center;
+  justify-content: center;
+  background-color: cornflowerblue;
+  height: 100%;
+}
+
 .container.loginContainer {
   max-width: 500px;
   /*min-height: 400px;*/
   background-color: white;
-  border-radius: 25px;
+  border-radius: var(--custom-BR);
   padding: 25px;
   z-index: 1;
 }
 
 .container.backgroundContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   max-width: 1500px;
   width: 90%;
   background-color: #00000055;
-  border-radius: 25px;
+  border-radius: var(--custom-BR);
   padding: 25px;
   height: 90%;
   max-height: 1000px;
@@ -224,8 +297,8 @@ label {
   left: 0;
   margin-left: 20vw;
   margin-top: 10vh;
-  border-top-left-radius: 25px;
-  border-bottom-left-radius: 25px;
+  border-top-left-radius: var(--custom-BR);
+  border-bottom-left-radius: var(--custom-BR);
 }
 
 .title {
@@ -286,7 +359,7 @@ label {
 .buttons {
   grid-row: 6;
   font-size: 1vw;
-  border-radius: 25px;
+  border-radius: var(--custom-BR);
   width: 25%;
   margin: auto;
   font-family: "Roboto", sans-serif;
@@ -301,7 +374,7 @@ label {
 
 .createAccount {
   font-size: 10px;
-  border-radius: 25px;
+  border-radius: var(--custom-BR);
   width: 90%;
   margin: auto;
   font-family: "Roboto", sans-serif;
@@ -334,8 +407,8 @@ label {
   z-index: -1;
   position: relative;
   left: 0;
-  border-top-right-radius: 25px;
-  border-bottom-right-radius: 25px;
+  border-top-right-radius: var(--custom-BR);
+  border-bottom-right-radius: var(--custom-BR);
 }
 
 .contacticalHand {
