--- a/css/styles.css
+++ b/css/styles.css
@@ -35,6 +35,13 @@ body {
     }
 }
 
+.overlay {
+  background-color: rgba(255, 255, 255, 0.85);
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
+
 .contacts {
   overflow: auto;
   border-bottom: 1px solid var(--custom-light-gray);
