--- a/css/styles.css
+++ b/css/styles.css
@@ -37,9 +37,13 @@ body {
 
 .overlay {
   background-color: rgba(255, 255, 255, 0.85);
-  position: absolute;
+  position: relative;
   width: 100%;
   height: 100%;
+  align-items: center;
+  justify-items: center;
+  justify-content: center;
+  display: flex;
 }
 
 .contacts {
