add border radius

--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,11 @@ body {
   background-color: cadetblue;
 }
 
+.alert {
+  border-radius: var(--custom-BR) !important;
+  overflow: hidden;
+}
+
 .modal-content {
   border-radius: var(--custom-BR) !important;
   overflow: hidden !important;
