--- a/css/styles.css
+++ b/css/styles.css
@@ -147,6 +147,13 @@ body {
   overflow: hidden;
 }
 
+.profile-img {
+  width: 40px;
+  height: 40px;
+  max-height: 40px;
+  min-width: 40px;
+}
+
 .profile-icon.enlarged {
   width: 80px;
   height: 80px;
