--- a/css/styles.css
+++ b/css/styles.css
@@ -29,6 +29,17 @@ body {
     animation: gradient 15s ease infinite;
 }
 
+.loading-overlay {
+  position: fixed;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255, 255, 255, 0.65);
+  z-index: 5;
+}
+
 @keyframes gradient {
     0% {
         background-position: 0 50%;
@@ -52,6 +63,10 @@ body {
 
   h1 {
     color: white;
+  }
+
+  .loading-overlay {
+    background-color: rgba(0, 0, 0, 0.65) !important;
   }
 
   .list-group-item {
